reset and rebound
